tests/snapshots/corpus__malformed_encrypted_errors.snap
---
source: tests/corpus.rs
assertion_line: 131
expression: snap
---
exit: 2
--- stdout ---
--- stderr ---
reader: 无法解析文档 <fixture>: document is encrypted
