tests/snapshots/corpus__malformed_mismatched_recovers.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
Mismatched tags
--- stderr ---
