tests/snapshots/corpus__malformed_unbalanced_recovers.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== section 1 ==
# Heading via style
Before the binary blob.
After the binary blob: braces stay balanced.
- iv. Roman four via list table
- v. Roman five
- x. Roman ten via start override
- xi. Roman eleven
7. Decimal seven via format override
| Wide header |  |
| --- | --- |
| L | R |
| outer second<br>nested A / nested B |  |
Да
Persian join: می‌خ
--- stderr ---
