tests/snapshots/corpus__malformed_unclosed_recovers.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
Unclosed paragraph text
--- stderr ---
