tests/snapshots/corpus__odp_pres.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
Deck Title Slide
- Top level point
- - Nested detail
- Second point with emphasis
> Speaker note for the intro slide.
Numbers Slide
| Region | Total |
| --- | --- |
| North | 42 |
Grouped shapes below.
Inside a group shape.
> Second slide notes mention the table.
--- stderr ---
