tests/snapshots/corpus__ods_handmade_durations.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
|  |  |  |  |  |
| --- | --- | --- | --- | --- |
| 26:00:00 | 26:30:15 | 336:00:00 | -1:05:00 | P1M |
| 12:00:00 | 1:30:00 | 0:01:30 | 0:00:01.250 | PT99999999999999999999H |
--- stderr ---
